<?xml version="1.0"?>
<package format="3">
  <name>easynav_support_py</name>
  <version>0.1.4</version>
  <description>Support utilities for EasyNav in Python: GoalManagerClient and tests.</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <maintainer email="franciscom.moreno@urjc.es">Francisco Miguel Moreno Olivo</maintainer>
  <maintainer email="esther.aguado@urjc.es">Esther Aguado González</maintainer>
  <maintainer email="juan.cely@urjc.es">Juan Sebastián Cely Gutiérrez</maintainer>
  <maintainer email="josemiguel.guerrero@urjc.es">José Miguel Guerrero Hernández</maintainer>

  <license>GPL-3.0-or-later</license>

  <author>Francisco Martín Rico</author>
  <author>Francisco Miguel Moreno Olivo</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>easynav_interfaces</exec_depend>

  <!-- Test and launch deps -->
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
