<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easynav_maps_manager</name>
  <version>0.2.0</version>
  <description>Easy Navigation: MapsManager package.</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <maintainer email="franciscom.moreno@urjc.es">Francisco Miguel Moreno Olivo</maintainer>
  <maintainer email="esther.aguado@urjc.es">Esther Aguado González</maintainer>
  <maintainer email="juan.cely@urjc.es">Juan Sebastián Cely Gutiérrez</maintainer>
  <maintainer email="josemiguel.guerrero@urjc.es">José Miguel Guerrero Hernández</maintainer>
  
  <license>GPL-3.0-only</license>

  <author>Francisco Martín Rico</author>
  <author>Francisco Miguel Moreno Olivo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>easynav_common</depend>
  <depend>easynav_core</depend>
  <depend>pluginlib</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
