<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easynav_tools</name>
  <version>0.3.2</version>
  <description>ROS 2 Navigation tools: TUI + ros2cli commands for EasyNav.</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <maintainer email="franciscom.moreno@urjc.es">Francisco Miguel Moreno Olivo</maintainer>
  <maintainer email="esther.aguado@urjc.es">Esther Aguado González</maintainer>
  <maintainer email="juan.cely@urjc.es">Juan Sebastián Cely Gutiérrez</maintainer>
  <maintainer email="josemiguel.guerrero@urjc.es">José Miguel Guerrero Hernández</maintainer>

  <license>GPL-3.0-or-later</license>

  <author>Francisco Martín Rico</author>
  <author>Francisco Miguel Moreno Olivo</author>

  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>easynav_interfaces</exec_depend>
  <exec_depend>easynav_support_py</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>python3-rich</exec_depend>
  <exec_depend>python3-typing-extensions</exec_depend>
  <exec_depend>python3-platformdirs</exec_depend>

  <!-- Test and launch deps -->
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
