<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easynav</name>
  <version>0.1.4</version>
  <description>Easy Navigation:Mata package for installing all EasyNav.</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <maintainer email="franciscom.moreno@urjc.es">Francisco Miguel Moreno Olivo</maintainer>
  <maintainer email="esther.aguado@urjc.es">Esther Aguado González</maintainer>
  <maintainer email="juan.cely@urjc.es">Juan Sebastián Cely Gutiérrez</maintainer>
  <maintainer email="josemiguel.guerrero@urjc.es">José Miguel Guerrero Hernández</maintainer>

  <license>GPL-3.0-only</license>

  <author>Francisco Martín Rico</author>
  <author>Francisco Miguel Moreno Olivo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>easynav_common</depend>
  <depend>easynav_controller</depend>
  <depend>easynav_core</depend>
  <depend>easynav_interfaces</depend>
  <depend>easynav_maps_manager</depend>
  <depend>easynav_planner</depend>
  <depend>easynav_localizer</depend>
  <depend>easynav_sensors</depend>
  <depend>easynav_support_py</depend>
  <depend>easynav_system</depend>
  <depend>easynav_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
